# ros_glass_tools

./: CMakeLists.txt  LICENSE.txt  example.launch  package.xml  readme.md  test.launch
applications/GlassRosMonitor/: AndroidManifest.xml  NOTICE.txt
applications/GlassRosMonitor/res/layout/: warn_card.xml
applications/GlassRosMonitor/res/menu/: main.xml
applications/GlassRosMonitor/res/values/: strings.xml
applications/GlassRosMonitor/res/xml/: voice_trigger_start.xml
applications/GlassRosMonitor/src/edu/nimbus/glass/: MenuActivity.java  ROSMonitorManager.java  ROSMonitorService.java  StartServiceActivity.java
applications/GlassTopicViewer/: AndroidManifest.xml
applications/GlassTopicViewer/res/layout/: topic.xml
applications/GlassTopicViewer/res/menu/: topic.xml
applications/GlassTopicViewer/res/values/: strings.xml
applications/GlassTopicViewer/res/xml/: voice_trigger_start.xml
applications/GlassTopicViewer/src/edu/nimbus/glass/: TopicFieldSelectActivity.java  TopicManager.java  TopicMenuActivity.java  TopicRenderer.java  TopicSelectActivity.java  TopicService.java  TopicView.java
applications/GlassTopicViewer/src/edu/nimbus/glass/screens/: AllTopics.java  FieldFocus.java  Graph.java  Screen.java
applications/RobotVoiceControl/: AndroidManifest.xml
applications/RobotVoiceControl/res/layout/: activity_voice_control.xml
applications/RobotVoiceControl/res/values/: strings.xml
applications/RobotVoiceControl/res/xml/: voice_trigger_start.xml
scripts/: glass_monitor.py  list_topics.py  voice_command.py
srv/: Command.srv  Topics.srv
(+2 files in other folders)
